syntax = "proto3";
package rafter;

option go_package = "github.com/dihedron/rafter/proto";

service Context {
	rpc Set(SetRequest) returns (SetResponse) {}
	rpc Get(GetRequest) returns (GetResponse) {}
	rpc Remove(RemoveRequest) returns (RemoveResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
	rpc Clear(ClearRequest) returns (ClearResponse) {}
}

message SetRequest {
	string key = 1;
	bytes value = 2;	
}

message SetResponse {
	uint64 index = 1;
	string error = 2;
}

message GetRequest {
	string key = 1;	
}

message GetResponse{
	uint64 index = 1;
	string key = 2;
	bytes value = 3;
	string error = 4;
}

message RemoveRequest {
	string key = 1;	
}

message RemoveResponse{
	uint64 index = 1;
	string key = 2;
	bytes value = 3;
	string error = 4;
}

message ListRequest {
	string filter = 1;	
}

message ListResponse{
	uint64 index = 1;
	string error = 2;
	repeated string keys = 3;
}

message ClearRequest {
	string filter = 1;	
}

message ClearResponse{
	uint64 index = 1;
	string error = 2;
}
